--- a/src/main/resources/templates/majors.html
+++ b/src/main/resources/templates/majors.html
@@ -51,12 +51,12 @@
 			</table>
 		</div>
 
-		<div id="new-element" style="height: 220px; padding-top: 50px;">
+		<div id="new-element" class="popup-fixed" style="height: 220px; padding-top: 50px;">
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
 				<form action="/add_major" id="newform" method="get" target="sendframe" class="pad-medium wide new-grid">
-					<label for="name">Ime:</label><input type="text" name="name">
+					<label for="name">Ime:</label><input type="text" name="name" required>
 				</form>
 				<div class="flex-row wide pad-medium">
 					<button type="submit" form="newform">Submit</button>
