--- a/src/main/resources/static/css/data-style.css
+++ b/src/main/resources/static/css/data-style.css
@@ -448,3 +448,28 @@ input[type=number]{
 	margin: 0px;
 	font-weight: 900;
 }
+
+.dropdown-preview {
+	position: absolute;
+	top: 0; left: 0;
+	width: 100%; height: 100%;
+	pointer-events: none;
+	text-align: center;
+	background-color: transparent;
+	color: white;
+	margin-top: 3%;
+	font-size: 12px;
+	font-family: Century Gothic, arial, sans-serif;
+
+	white-space: nowrap;
+  	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.dropdown-preview:hover {
+	color: var(--color-darker);
+}
+
+.dropdown>input, .dropdown>input:hover {
+	color: transparent;
+}
