--- a/src/main/resources/templates/staff.html
+++ b/src/main/resources/templates/staff.html
@@ -44,9 +44,10 @@
 						<label class="select-label">Predmet:</label>
 	    				<div class="dropdown multiselect">
 							<input name="subject" value="all" readonly>
+							<div class="dropdown-preview"></div>
 							<div class="dd-options" id="subject-options">
 								<div class="flex-row">
-									<label for="subject-options-0">All</label>
+									<label for="subject-options-0">Svi</label>
 									<input type="checkbox" id="subject-options-0" value="all" checked>
 								</div>
 							</div>
@@ -57,9 +58,10 @@
 						<label class="select-label">Smer:</label>
 	    				<div class="dropdown multiselect">
 							<input name="major" value="all" readonly>
+							<div class="dropdown-preview"></div>
 							<div class="dd-options" id="major-options">
 								<div class="flex-row">
-									<label for="major-options-0">All</label>
+									<label for="major-options-0">Svi</label>
 									<input type="checkbox" id="major-options-0" value="all" checked>
 								</div>
 							</div>
@@ -70,6 +72,7 @@
 						<label class="select-label" for="order_by">Sortiraj po:</label>
 						<div class="dropdown">
 							<input name="order_by" value="index" readonly>
+							<div class="dropdown-preview"></div>
 							<div class="dd-options">
 								<option value="lect_id">ID</option>
 								<option value="last_name">Prezime</option>
@@ -108,7 +111,8 @@
 					<label for="last_name">Prezime:</label><input type="text" name="last_name" required>
 					<label for="title">Zvanje:</label>
 						<div class="dropdown no-auto-submit">
-							<input name="title" value="" readonly required>
+							<input name="title" value="" minlength="1" readonly required>
+							<div class="dropdown-preview"></div>
 							<div class="dd-options" id="title-options">
 								<option value="Asistent">Asistent</option>
 								<option value="Docent">Docent</option>
