--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -29,7 +29,7 @@
 		<div id="content">
 			<div id="content-header">
 				<form action="/get_all_users" id="search" method="get" target="dataframe">
-					<input type="text" id="searchbar" value="" placeholder="Search..." onchange="fillTables();">
+					<input type="text" id="searchbar" value="" placeholder="Search..." oninput="fillTables();">
 
 					<div class="form-element">
 						<label class="select-label">Rastuci poredak:</label>
