--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Studentska sluzba</title>
+	<link rel="icon" type="image/x-icon" href="../static/favicon.ico" th:href="@{/favicon.ico}">
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css" th:href="@{/css/style.css}"/>
 	<link rel="stylesheet" type="text/css" href="../static/css/data-style.css" th:href="@{/css/data-style.css}"/>
 	<script type="text/javascript" language="Javascript" src="../static/js/user-loader.js" th:src="@{/js/user-loader.js}"></script>
