--- a/src/main/resources/templates/staff.html
+++ b/src/main/resources/templates/staff.html
@@ -21,7 +21,7 @@
 		}
 	</script>
 </head>
-<body onload="getToken(); setDataType('lecturer', 'lecturer', 3); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); submitSearch(); makeRequest('/get_lecturer_filters','sendframe'); initGetFilters('sendframe');">
+<body onload="getToken(); setDataType('lecturer', 'lectId', 3, 3); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); addTokenToLinks(); submitSearch(); makeRequest('/get_lecturer_filters','sendframe'); initGetFilters('sendframe');">
 	<div id="background"></div>
 	<div id="wrapper">
 		<header>
@@ -83,7 +83,7 @@
 					</div>
 
 					<div class="form-element">
-						<label class="select-label">Rastuci poredak:</label>
+						<label class="select-label">Rastući poredak:</label>
 						<input type="checkbox" class="labeled" onchange="changeOrder(this.checked);" checked>
 					</div>
 
@@ -104,7 +104,7 @@
 
 		<div id="new-element" class="popup-fixed">
 			<div class="flex-col size-max">
-				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7</div>
+				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
 				<form action="/add_lecturer" id="newform" method="get" target="sendframe" class="pad-medium wide new-grid" >
 					<label for="first_name">Ime:</label><input type="text" name="first_name" required>
@@ -124,6 +124,34 @@
 				<div class="flex-row wide pad-medium">
 					<button type="submit" form="newform">Submit</button>
 					<button type="reset" form="newform">Clear</button>
+				</div>
+			</div>
+		</div>
+
+		<div id="update-element" class="popup-fixed">
+			<div class="flex-col size-max">
+				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
+				<br>
+				<form action="/update_lecturer" id="updateform" method="get" target="sendframe" class="pad-medium wide new-grid" >
+					<label for="new-lectId">ID:</label><input type="text" name="new-lectId" required>
+					<label for="firstName">Ime:</label><input type="text" name="firstName" required>
+					<label for="lastName">Prezime:</label><input type="text" name="lastName" required>
+					<label for="title">Zvanje:</label>
+					<div class="dropdown no-auto-submit">
+						<input name="title" value="" minlength="1" readonly required>
+						<div class="dropdown-preview"></div>
+						<div class="dd-options" id="title-options">
+							<option value="Asistent">Asistent</option>
+							<option value="Docent">Docent</option>
+							<option value="Honorarni profesor">Vanredni profesor</option>
+							<option value="Redovni profesor">Redovni profesor</option>
+						</div>
+					</div>
+					<input type="hidden" name="" id="updated_id" required>
+				</form>
+				<div class="flex-row wide pad-medium">
+					<button type="submit" form="updateform">Submit</button>
+					<button type="reset" form="updateform">Clear</button>
 				</div>
 			</div>
 		</div>
