Fixed a bug where clicking delete brings up update form instead. Fixed a bug in update student form, where index was not being set to proper value.

--- a/src/main/resources/templates/exams.html
+++ b/src/main/resources/templates/exams.html
@@ -50,7 +50,7 @@
 			<div class="table-title">
 				<h1>Ispiti:</h1>
 			</div>
-			<table id="exams">
+			<table id="exams" class="table-static">
 				<tr>
 					<th>Ime</th><th>Prezime</th><th>Indeks</th>
 				</tr>
@@ -63,7 +63,7 @@
 			<div class="table-title">
 				<h1>Ispitni rokovi:</h1>
 			</div>
-			<table id="exam-deadlines">
+			<table id="exam-deadlines" class="table-static">
 				<tr>
 					<th>Ime</th><th>Prezime</th><th>Indeks</th>
 				</tr>
