--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -145,7 +145,7 @@
 			</div>
 		</div>
 
-		<div id="update-element" class="popup-fixed">
+		<div id="update-element" class="popup-fixed" style="padding-top: 30px;">
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
