--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -43,7 +43,7 @@
 
 				<div class="pad-medium">
 					<h1>Studenti:</h1>
-					<table id="data-student">
+					<table id="data-student" class="table-static">
 						<tr>
 							<th>Ime</th><th>Prezime</th><th>Indeks</th>
 						</tr>
@@ -55,7 +55,7 @@
 
 				<div class="pad-medium">
 					<h1>Predavaci:</h1>
-					<table id="data-lecturer">
+					<table id="data-lecturer" class="table-static">
 						<tr>
 							<th>Ime</th><th>Prezime</th><th>Indeks</th>
 						</tr>
@@ -67,7 +67,7 @@
 
 				<div class="pad-medium">
 					<h1>Administratori:</h1>
-					<table id="data-admin">
+					<table id="data-admin" class="table-static">
 						<tr>
 							<th>Ime</th><th>Prezime</th><th>Indeks</th>
 						</tr>
