--- a/src/main/resources/templates/staff.html
+++ b/src/main/resources/templates/staff.html
@@ -102,7 +102,7 @@
 			</table>
 		</div>
 
-		<div id="new-element" class="popup-fixed">
+		<div id="new-element" class="popup-fixed" style="height: 320px; padding-top: 50px;">
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
@@ -128,7 +128,7 @@
 			</div>
 		</div>
 
-		<div id="update-element" class="popup-fixed">
+		<div id="update-element" class="popup-fixed" style="height: 320px; padding-top: 50px;">
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
