Updated exams page. Fixed table style for non-updatable tables.

--- a/src/main/resources/static/css/data-style.css
+++ b/src/main/resources/static/css/data-style.css
@@ -76,7 +76,7 @@ tr:nth-child(odd)>* {
 	background-color: var(--table-odd);
 }
 
-:not(.table-static) tr:hover>td {
+table:not(.table-static)>tr:hover>td {
 	cursor: pointer;
 	background-color: var(--color-highlight);
 }
